[package]
name = "trello-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.68"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
axum = "0.2.8"
serde = "1.0.130"